[projects] ru and en versions, platform perplex

--- a/en/index.html
+++ b/en/index.html
@@ -2,6 +2,9 @@
 title: "home page"
 ---
 <li>
+  <a href="/en/projects/platform-perplex.html">Platform Perplex</a>
+</li>
+<li>
   <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: Fermenting the digital platforms</a>
 </li>
 <li>
@@ -17,29 +20,29 @@ title: "home page"
   <a href="http://workhardplay.pw/" target="_blank4">Work Hard! Play Hard!</a>
 </li>
 <li>
-  <a href="/projects/picnic-near-data-center.html" target="_blank">Picnic Near Data Center</a>
+  <a href="/en/projects/picnic-near-data-center.html">Picnic Near Data Center</a>
 </li>
 <li>
-  <a href="/projects/expedition-through-it-infrastructure.html" target="_blank">Expedition through IT infrastructure</a>
+  <a href="/en/projects/expedition-through-it-infrastructure.html">Expedition through IT infrastructure</a>
 </li>
 <li>
   <a href="http://paranoiapp.net" target="_blank">paranoiapp</a>
 </li>
 <li>
-  <a href="/projects/cat-scout.html" target="_blank">Cat scout</a>
+  <a href="/en/projects/cat-scout.html">Cat scout</a>
 </li>
 <li>
-  <a href="/projects/obj.html" target="_blank">OBJ</a>
+  <a href="/en/projects/obj.html">OBJ</a>
 </li>
 <li>
-  <a href="/projects/psychodata.html" target="_blank">psychodata</a>
+  <a href="/en/projects/psychodata.html">psychodata</a>
 </li>
 <li>
-  <a href="/projects/blockade.html" target="_blank">Plan der Wohnung von Herrn Kuharski</a>
+  <a href="/en/projects/blockade.html">Plan der Wohnung von Herrn Kuharski</a>
 </li>
 <li>
-  <a href="/projects/weissensee.html" target="_blank">Weissensee Lake advertisement</a>
+  <a href="/en/projects/weissensee.html">Weissensee Lake advertisement</a>
 </li>
 <li>
-  <a href="/projects/mobile-agitator.html" target="_blank">Mobile agitator</a>
+  <a href="/en/projects/mobile-agitator.html">Mobile agitator</a>
 </li>
