--- a/ru/index.html
+++ b/ru/index.html
@@ -17,29 +17,29 @@ title: "домашнаяя страничка"
   <a href="http://workhardplay.pw/" target="_blank4">Work Hard! Play Hard!</a>
 </li>
 <li>
-  <a href="/projects/picnic-near-data-center.html" target="_blank">Picnic Near Data Center</a>
+  <a href="/ru/projects/picnic-near-data-center.html">Picnic Near Data Center</a>
 </li>
 <li>
-  <a href="/projects/expedition-through-it-infrastructure.html" target="_blank">Expedition through IT infrastructure</a>
+  <a href="/ru/projects/expedition-through-it-infrastructure.html">Expedition through IT infrastructure</a>
 </li>
 <li>
   <a href="http://paranoiapp.net" target="_blank">paranoiapp</a>
 </li>
 <li>
-  <a href="/projects/cat-scout.html" target="_blank">Cat scout</a>
+  <a href="/ru/projects/cat-scout.html">Cat scout</a>
 </li>
 <li>
-  <a href="/projects/obj.html" target="_blank">OBJ</a>
+  <a href="/ru/projects/obj.html">OBJ</a>
 </li>
 <li>
-  <a href="/projects/psychodata.html" target="_blank">psychodata</a>
+  <a href="/ru/projects/psychodata.html">psychodata</a>
 </li>
 <li>
-  <a href="/projects/blockade.html" target="_blank">Plan der Wohnung von Herrn Kuharski</a>
+  <a href="/ru/projects/blockade.html">Plan der Wohnung von Herrn Kuharski</a>
 </li>
 <li>
-  <a href="/projects/weissensee.html" target="_blank">Weissensee Lake advertisement</a>
+  <a href="/ru/projects/weissensee.html">Weissensee Lake advertisement</a>
 </li>
 <li>
-  <a href="/projects/mobile-agitator.html" target="_blank">Mobile agitator</a>
+  <a href="/ru/projects/mobile-agitator.html">Mobile agitator</a>
 </li>
