[dsgn] page specific menu and lang-switch design

--- a/ru/index.html
+++ b/ru/index.html
@@ -2,6 +2,9 @@
 title: "домашнаяя страничка"
 ---
 <li>
+  <a href="/ru/projects/platform-perplex.html">Platform Perplex</a>
+</li>
+<li>
   <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: Fermenting the digital platforms</a>
 </li>
 <li>
