[cloud-bushes] added page, changed link on index page

--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@ title: "home page"
   <a href="/en/projects/platform-perplex.html">Platform Perplex</a>
 </li>
 <li>
-  <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: Fermenting the digital platforms</a>
+  <a href="/en/projects/cloud-bushes.html">Cloud Bushes: Fermenting the digital platforms</a>
 </li>
 <li>
   <a href="http://sws.eeefff.org/" target="_blank">Simultaneous Work Sessions</a>
