new projects and removed new toc functions

--- a/en/index.html
+++ b/en/index.html
@@ -29,6 +29,14 @@ title: "home page"
   <a href="http://paranoiapp.net" target="_blank">paranoiapp</a>
 </li>
 <li>
+  <a href="http://workhardplay.pw/en/2016/archive/eeefff-wargaming-labor-inspection.html" target="_blank">Wargaming labor inspection</a>
+</li>
+
+<li>
+  <a href="http://workhardplay.pw/en/2016/archive/eeefff-stress-test.html" target="_blank">Economic strategies stress test</a>
+</li>
+
+<li>
   <a href="/en/projects/cat-scout.html">Cat scout</a>
 </li>
 <li>
