--- a/ru/index.html
+++ b/ru/index.html
@@ -5,44 +5,52 @@ title: "домашнаяя страничка"
   <a href="/ru/projects/platform-perplex.html">Platform Perplex</a>
 </li>
 <li>
-  <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: Fermenting the digital platforms</a>
+  <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: ферментирования цифровых платформ</a>
 </li>
 <li>
-  <a href="http://sws.eeefff.org/" target="_blank">Simultaneous Work Sessions</a>
+  <a href="http://sws.eeefff.org/" target="_blank">Сессии одновременной работы</a>
 </li>
 <li>
   <a href="http://myfutures.trade/" target="_blank">myfutures.trade</a>
 </li>
 <li>
-  <a href="http://scc.eeefff.org/" target="_blank">Speculative Computer Club</a>
+  <a href="http://scc.eeefff.org/" target="_blank">Спекулятивный Компьютерный клуб</a>
 </li>
 <li>
-  <a href="http://workhardplay.pw/" target="_blank4">Work Hard! Play Hard!</a>
+  <a href="http://workhardplay.pw/" target="_blank4">Работай больше! Отдыхай больше!</a>
 </li>
 <li>
-  <a href="/ru/projects/picnic-near-data-center.html">Picnic Near Data Center</a>
+  <a href="/en/projects/picnic-near-data-center.html">Пикник возле дата-центра</a>
 </li>
 <li>
-  <a href="/ru/projects/expedition-through-it-infrastructure.html">Expedition through IT infrastructure</a>
+  <a href="/ru/projects/expedition-through-it-infrastructure.html">Экспедиция сквозь дата-центры к технобудущему</a>
 </li>
 <li>
   <a href="http://paranoiapp.net" target="_blank">paranoiapp</a>
 </li>
 <li>
-  <a href="/ru/projects/cat-scout.html">Cat scout</a>
+  <a href="http://workhardplay.pw/ru/2016/archive/eeefff-wargaming-labor-inspection.html" target="_blank">Инспекция труда в Wargaming</a>
+</li>
+
+<li>
+  <a href="http://workhardplay.pw/ru/2016/archive/eeefff-stress-test.html" target="_blank">Стресс-тест экономических стратегий</a>
+</li>
+
+<li>
+  <a href="/ru/projects/cat-scout.html">Кошка-скаут</a>
 </li>
 <li>
-  <a href="/ru/projects/obj.html">OBJ</a>
+  <a href="/ru/projects/obj.html">ОБЖ</a>
 </li>
 <li>
   <a href="/ru/projects/psychodata.html">psychodata</a>
 </li>
 <li>
-  <a href="/ru/projects/blockade.html">Plan der Wohnung von Herrn Kuharski</a>
+  <a href="/ru/projects/blockade.html">План квартиры гражданина Кухарского</a>
 </li>
 <li>
   <a href="/ru/projects/weissensee.html">Weissensee Lake advertisement</a>
 </li>
 <li>
-  <a href="/ru/projects/mobile-agitator.html">Mobile agitator</a>
+  <a href="/ru/projects/mobile-agitator.html">Мобильный агитатор</a>
 </li>
