--- a/en/index.html
+++ b/en/index.html
@@ -8,6 +8,10 @@ title: "home page"
   <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: Fermenting the digital platforms</a>
 </li>
 <li>
+  <a href="/en/projects/hackathon-choreography.html">Hackathon Horeography</a>
+</li>
+
+<li>
   <a href="http://sws.eeefff.org/" target="_blank">Simultaneous Work Sessions</a>
 </li>
 <li>
