--- a/ru/index.html
+++ b/ru/index.html
@@ -8,6 +8,9 @@ title: "домашнаяя страничка"
   <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: ферментирования цифровых платформ</a>
 </li>
 <li>
+  <a href="/ru/projects/hackathon-choreography.html">Хореография Хакатона</a>
+</li>
+<li>
   <a href="http://sws.eeefff.org/" target="_blank">Сессии одновременной работы</a>
 </li>
 <li>
@@ -20,7 +23,7 @@ title: "домашнаяя страничка"
   <a href="http://workhardplay.pw/" target="_blank4">Работай больше! Отдыхай больше!</a>
 </li>
 <li>
-  <a href="/en/projects/picnic-near-data-center.html">Пикник возле дата-центра</a>
+  <a href="/ru/projects/picnic-near-data-center.html">Пикник возле дата-центра</a>
 </li>
 <li>
   <a href="/ru/projects/expedition-through-it-infrastructure.html">Экспедиция сквозь дата-центры к технобудущему</a>
