[projects] error-friendly-networks

--- a/ru/index.html
+++ b/ru/index.html
@@ -2,6 +2,9 @@
 title: "домашнаяя страничка"
 ---
 <li>
+  <a href="/ru/projects/error-friendly-networks.html">error-friendly сети</a>
+</li>
+<li>
   <a href="/ru/projects/platform-perplex.html">Platform Perplex</a>
 </li>
 <li>
