--- a/en/index.html
+++ b/en/index.html
@@ -2,6 +2,9 @@
 title: "home page"
 ---
 <li>
+  <a href="/en/projects/traffic-loop-1.html">Traffic Loop</a>
+</li>
+<li>
   <a href="/en/projects/error-friendly-networks.html">error-friendly networks</a>
 </li>
 <li>
