--- a/ru/index.html
+++ b/ru/index.html
@@ -2,10 +2,10 @@
 title: "домашнаяя страничка"
 ---
 <li>
-  <a href="/ru/projects/traffic-loop-1.html">Трафик Луп</a>
+  <a href="/ru/projects/error-friendly-networks.html">сети, дружелюбные к ошибкам</a>
 </li>
 <li>
-  <a href="/ru/projects/error-friendly-networks.html">error-friendly сети</a>
+  <a href="/ru/projects/traffic-loop-1.html">Трафик Луп</a>
 </li>
 <li>
   <a href="/ru/projects/platform-perplex.html">Platform Perplex</a>
