[about][prep-to-sync] added pages

--- a/en/index.html
+++ b/en/index.html
@@ -1,12 +1,17 @@
 ---
 title: "home page"
+aboutLabel: "ABOUT EEEFFF"
 ---
-<li>
+<li  class="new">
   <a href="/en/projects/error-friendly-networks.html">error-friendly networks</a>
 </li>
 <li>
   <a href="/en/projects/traffic-loop-1.html">Traffic Loop</a>
 </li>
+<li class="new">
+  <a href="/en/projects/prepare-to-synchronize.html">Prepare to Synchronize</a>
+</li>
+
 <li>
   <a href="/en/projects/platform-perplex.html">Platform Perplex</a>
 </li>
@@ -45,7 +50,6 @@ title: "home page"
 <li>
   <a href="http://workhardplay.pw/en/2016/archive/eeefff-stress-test.html" target="_blank">Economic strategies stress test</a>
 </li>
-
 <li>
   <a href="/en/projects/cat-scout.html">Cat scout</a>
 </li>
