--- a/ru/index.html
+++ b/ru/index.html
@@ -1,12 +1,17 @@
 ---
 title: "домашнаяя страничка"
+aboutLabel: "O EEEFFF"
 ---
-<li>
+<li  class="new">
   <a href="/ru/projects/error-friendly-networks.html">сети, дружелюбные к ошибкам</a>
 </li>
 <li>
   <a href="/ru/projects/traffic-loop-1.html">Трафик Луп</a>
 </li>
+<li class="new">
+  <a href="/ru/projects/prepare-to-synchronize.html">ПРИГОТОВЬТЕСЬ К СИНХРОНИЗАЦИИ</a>
+</li>
+
 <li>
   <a href="/ru/projects/platform-perplex.html">Platform Perplex</a>
 </li>
