[auto-rest-zone] added text and photos

--- a/en/index.html
+++ b/en/index.html
@@ -5,12 +5,17 @@ aboutLabel: "ABOUT EEEFFF"
 <li  class="new">
   <a href="/en/projects/error-friendly-networks.html">error-friendly networks</a>
 </li>
-<li>
+<li class="new">
   <a href="/en/projects/traffic-loop-1.html">Traffic Loop</a>
 </li>
 <li class="new">
   <a href="/en/projects/prepare-to-synchronize.html">Prepare to Synchronize</a>
 </li>
+
+<li class="new">
+  <a href="/en/projects/automated-recreation-zone.html">Automated Recreation Zone</a>
+</li>
+
 
 <li>
   <a href="/en/projects/platform-perplex.html">Platform Perplex</a>
